--- a/components/navBar/navBar.css
+++ b/components/navBar/navBar.css
@@ -1,7 +1,9 @@
 .nav-bar-div{
+    display: grid;
     grid-template-columns: 5rem auto;
     gap: 1rem;
-    align-items: center;
+    height: 100vh;
+    border: 1px solid black;
 }
 .nav-bar-div .img-logo{
     width: 4rem;
