Actualizacion del portafolio

--- a/components/proyect/project.css
+++ b/components/proyect/project.css
@@ -1,34 +1,28 @@
 .section{
-    padding: 0.3rem;
-
+    padding: 1.5rem 2rem;
 }
 
+.div-item {
+    border-bottom: 1px solid gray;
+    padding: 1rem;
 
-.header{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+}
+
+.link-github-page{
+    text-decoration: none;
+}
+
+.btn-github{
     width: 100%;
-    height: 4rem;
-
+    max-width: 8rem;
+    background-color: black;
+    color: white;
+    padding: 0.5rem 1.5rem;
+    border-radius: 3px;
 
     display: flex;
-    justify-content: space-between;
-    align-items: center ;
-    padding: 1rem;
-}
-
-.item{
-    padding: 1rem;
-}
-
-.header h2{
-    font-size: 2rem;
-
-}
-
-.header div{
-    background-color: black;
-    color: wheat;
-    padding: 0.5rem 1rem;
-    border-radius: 3px;
-    font-size: 1.4rem;
-    font-weight: 400;
+    align-items: center;
+    justify-content: center;
 }
