--- a/components/proyect/project.css
+++ b/components/proyect/project.css
@@ -7,7 +7,7 @@
     padding: 1rem;
 
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(4, 1fr);
 }
 
 .link-github-page{
@@ -25,4 +25,14 @@
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.btn-gitdescargas{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+.btn-gitdescargas img{
+    width: 4rem;
 }
